--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
-.App {
+* {
+  margin: 0;
+  padding: 0; 
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+body {
+  background-color: rgb(96, 107, 203);
+}
+
+h1 {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: 18px;
+  margin-bottom: 20px;
   color: white;
+  letter-spacing: 2px;
 }
 
-.App-link {
-  color: #61dafb;
+.mainDiv {
+  display: flex;
+  justify-content: center;
+  margin-top: 200px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container {
+  width: 35%;
+  border: 7px solid white;
+  background-color: rgb(227, 162, 162);
+  padding: 30px 50px;
+}
+
+.addBtn {
+  float: right;
+  background-color: #ff5757;
+  color: white;
+  padding: 5px;
 }
